--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^17.2.3",
-    "mongodb": "^7.0.0"
+    "express": "^5.2.1",
+    "mongodb": "^7.0.0",
+    "mongoose": "^9.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
